--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections.abd import mapping"
    ]
   },
   {
